--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                                 </tr>
                                 <tr>
                                     <td>19:05〜19:50</td>
+                                    <td>私のGitの使い方(いろふさん)</td>
                                     <td>セッション1: 未定</td>
                                 </tr>
                                 <tr>
@@ -99,7 +100,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>セッション2: 未定</td>
+                                    <td>現場で使える！実践Git(浦山さん)</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
